--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
       - name: Build and push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v5
         with:
           image: push bhagbat/sample
           registry: docker.io
