--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,16 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      #As it is a python project so we are setting python
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
            python-version: '3.x'
+           
+      - name: Install dependencies
+        run: |
+           python -m pip install --upgrade pip
+           pip install build
       - name: Build and push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
